# nerdhub-chat-cli-prototype-deno-typescript

./: .gitignore  cli.ts  deno.json  prekey-bundle.json  server.ts
bruno/Nerdhub/: bruno.json
cli/: cli.d.ts  context.ts  deno.json
cli/api/: auth.api.ts  e2ee-participant-onetime-prekey.api.ts  e2ee-participant.api.ts  user.api.ts
cli/commands/: db-reset.command.ts  index.command.ts  index.ts
cli/constants/: prekey-bundle.constants.ts
cli/crons/: index.ts  replenish-onetime-prekeys.cron.ts
cli/database/: db.connection.ts  db.migrations.ts  migrations.ts
cli/helpers/: api-fetch.helper.ts  device-id.helper.ts  local-encryption-key.helper.ts  local-encryption.helper.test.ts  local-encryption.helper.ts
cli/repository/: e2ee-participant-onetime-prekeys.repository.ts  e2ee-participant-prekey-bundles.repository.ts
cli/router/: index.ts  router.ts  routes.ts
cli/services/: local-encryption.service.test.ts  local-encryption.service.ts  onetime-prekey.service.test.ts  onetime-prekey.service.ts
cli/ui/: chat.ui.ts  chats.ui.ts  (+6 more)
core/: deno.json  index.ts
diagrams/: draft.excalidraw  local-encryption.excalidraw  prekey-bundle.drawio  prekey-bundle.excalidraw  request-pathname.excalidraw  socketi.excalidraw
primitives/: deno.json  index.ts
primitives/x3dh/lib/xeddsa/rust/: CHANGELOG.md  Cargo.toml  README.md
primitives/x3dh/lib/xeddsa/rust/src/: lib.rs  wasm_bindings.rs  xed25519.rs  xeddsa.rs
seed/: deno.json  prekey-bundle.seed.ts
server/: .env.example  .gitignore  connection-handler.ts  db-migrate.ts  deno.json  router.ts  server.d.ts  server.ts
(+156 files in other folders)
