[package]
name = "xeddsa"
version = "1.0.2"
authors = ["Dominik George <nik@naturalnet.de>"]
description = "Implementation of the XEdDSA signature algorithm designed for Signal by Trevor Perrin, et al"
repository = "https://codeberg.org/SpotNuts/xeddsa"
license = "Apache-2.0"
keywords = ["cryptography", "ed25519", "ecc", "signature", "eddsa"]
categories = ["cryptography", "wasm"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
curve25519-dalek = { version = "4.1.1", optional = true }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error"] }
ed25519 = "2.2.3"
ed25519-dalek = "2.0.0"
getrandom = "0.2"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"], optional = true }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
wasm-bindgen = "0.2.87"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["xed25519", "wasm"]
xed25519 = ["dep:curve25519-dalek", "dep:x25519-dalek"]
wasm = ["wee_alloc"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1 
